Added option to send list to featlist

--- a/web/tmpl/ListView.tmpl
+++ b/web/tmpl/ListView.tmpl
@@ -562,6 +562,7 @@ function send_list_to() {
 Send list to:  
  <select name="checked_action" id="checked_action">
   <option value="send_to_blast">CoGeBlast (genomes only)</option>
+  <option value="send_to_featlist">FeatList (features only)</option>
   <option value="send_to_msa">CoGeAlign (features only)</option>
   <option value="send_to_gevo">GEvo (features only)</option>
   <option value="send_to_synfind">SynFind (genomes & first feature)</option>
