updated warning text

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -448,7 +448,7 @@ function blastOff() {
 
 	var check = $('#genome_choice').getLength();
 	if (($('#blank').val())||(check==0)) {
-		alert('You have not selected any databases to blast. You must select at least one.');
+		alert('You have not selected any genomes to blast.');
 		$('#coge_blast').toggle();
 		return;
 	}
